Added icon classes and attribute isLoading.

--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@ Attributes:
 <br>
 
 <br-button class="primary small" label="Botão pequeno" icon="br-icons:user"></br-button>
-<br-button class="primary" label="Botão normal" icon="br-icons:user"></br-button>
+<br-button class="primary" label="Botão normal" icon="br-icons:user" id="teste" is-loading></br-button>
 <br-button class="primary large" label="Botão grande" icon="br-icons:user"></br-button>
 <br-button class="primary" label="Botão desabilitado" icon="br-icons:user" disabled></br-button>
 
