--- a/src/br-button.html
+++ b/src/br-button.html
@@ -8,10 +8,10 @@
 
     <template is="dom-if" if="{{icon}}">
       <br-icons icon$="{{icon}}" class="icon" hidden$="{{isLoading}}"></br-icons>
-    </template>
 
-    <template is="dom-if" if="{{isLoading}}">
-      <br-icons icon="br-icons:loading" class="icon"></br-icons>
+      <template is="dom-if" if="{{isLoading}}">
+        <br-icons icon="br-icons:loading" class="icon icon__spin"></br-icons>
+      </template>
     </template>
 
     <template is="dom-if" if="{{label}}">{{label}}</template>
