added isDisabled attribute

--- a/demo/index.html
+++ b/demo/index.html
@@ -36,7 +36,7 @@ Attributes:
 <br-button class="small" label="Botão pequeno" icon="br-icons:user"></br-button>
 <br-button label="Botão normal" icon="br-icons:user"></br-button>
 <br-button class="large" label="Botão grande" icon="br-icons:user"></br-button>
-<br-button label="Botão desabilitado" icon="br-icons:user" disabled></br-button>
+<br-button label="Botão desabilitado" icon="br-icons:user" is-disabled></br-button>
 
 <br>
 <br>
@@ -44,7 +44,7 @@ Attributes:
 <br-button class="primary small" label="Botão pequeno" icon="br-icons:user"></br-button>
 <br-button class="primary" label="Botão normal" icon="br-icons:user" id="teste" is-loading></br-button>
 <br-button class="primary large" label="Botão grande" icon="br-icons:user"></br-button>
-<br-button class="primary" label="Botão desabilitado" icon="br-icons:user" disabled></br-button>
+<br-button class="primary" label="Botão desabilitado" icon="br-icons:user" is-disabled></br-button>
 
 <br>
 <br>
@@ -52,7 +52,7 @@ Attributes:
 <br-button class="accent small" label="Botão pequeno"></br-button>
 <br-button class="accent" label="Botão normal"></br-button>
 <br-button class="accent large" label="Botão grande"></br-button>
-<br-button class="accent" label="Botão desabilitado" disabled></br-button>
+<br-button class="accent" label="Botão desabilitado" is-disabled></br-button>
 
 </div>
 
