--- a/demo/index.html
+++ b/demo/index.html
@@ -24,35 +24,46 @@
 Usage:
 Tag: <br-button></br-button>
 Attributes:
-	Class: small, large
-	Label: Label name
-	icon: iconUrl
+	label: Label name
+	type: button (default), submit
+	icon: br-icons:icon
 	is-disabled: If assigned to a br-button tag, it creates a disabled button
 -->
 
 
 
-<br-button class="btn-small" label="Botão pequeno" icon="br-icons:user"></br-button>
-<br-button label="Botão normal" icon="br-icons:user"></br-button>
-<br-button class="btn-large" label="Botão grande" icon="br-icons:user"></br-button>
-<br-button label="Botão desabilitado" icon="br-icons:user" is-disabled></br-button>
+<br-button class="btn btn-small" label="Botão pequeno" icon="br-icons:user"></br-button>
+<br-button class="btn" label="Botão normal" icon="br-icons:user"></br-button>
+<br-button class="btn btn-large" label="Botão grande" icon="br-icons:user"></br-button>
+<br-button class="btn" label="Botão desabilitado" icon="br-icons:user" is-disabled></br-button>
 
 <br>
 <br>
 
-<br-button class="btn-primary small" label="Botão pequeno" icon="br-icons:user"></br-button>
-<br-button class="btn-primary" label="Botão normal" icon="br-icons:user" id="teste" is-loading></br-button>
-<br-button class="btn-primary large" label="Botão grande" icon="br-icons:user"></br-button>
-<br-button class="btn-primary" label="Botão desabilitado" icon="br-icons:user" is-disabled></br-button>
+<br-button class="btn btn-primary small" label="Botão pequeno" icon="br-icons:user"></br-button>
+<br-button class="btn btn-primary" label="Botão normal" icon="br-icons:user" id="teste" is-loading></br-button>
+<br-button class="btn btn-primary large" label="Botão grande" icon="br-icons:user"></br-button>
+<br-button class="btn btn-primary" label="Botão desabilitado" icon="br-icons:user" is-disabled></br-button>
 
 <br>
 <br>
 
-<br-button class="btn-accent small" label="Botão pequeno"></br-button>
-<br-button class="btn-accent" label="Botão normal"></br-button>
-<br-button class="btn-accent large" label="Botão grande"></br-button>
-<br-button class="btn-accent" label="Botão desabilitado" is-disabled></br-button>
-<br-button class="btn-block btn-primary" label="Botão block"></br-button>
+<br-button class="btn btn-accent small" label="Botão pequeno"></br-button>
+<br-button class="btn btn-accent" label="Botão normal"></br-button>
+<br-button class="btn btn-accent large" label="Botão grande"></br-button>
+<br-button class="btn btn-accent" label="Botão desabilitado" is-disabled></br-button>
+
+<br-button class="btn btn-primary btn-icon" icon="br-icons:user"></br-button>
+
+<br>
+<br>
+
+<br-button class="btn btn-block btn-primary" label="Botão block"></br-button>
+
+<br>
+<br>
+
+<br-button class="btn btn-primary" label="Link button" href="http://google.com"></br-button>
 
 </div>
 
