Added classes to override the internal button.

--- a/demo/index.html
+++ b/demo/index.html
@@ -31,27 +31,23 @@ Attributes:
 -->
 
 
-
-<br-button class="btn btn-small" label="Botão pequeno" icon="br-icons:user"></br-button>
 <br-button class="btn" label="Botão normal" icon="br-icons:user"></br-button>
-<br-button class="btn btn-large" label="Botão grande" icon="br-icons:user"></br-button>
-<br-button class="btn" label="Botão desabilitado" icon="br-icons:user" is-disabled></br-button>
+<br-button class="btn" label="Botão desabilitado" icon="br-icons:user" is-loading></br-button>
 
 <br>
 <br>
 
-<br-button class="btn btn-primary small" label="Botão pequeno" icon="br-icons:user"></br-button>
-<br-button class="btn btn-primary" label="Botão normal" icon="br-icons:user" id="teste" is-loading></br-button>
-<br-button class="btn btn-primary large" label="Botão grande" icon="br-icons:user"></br-button>
-<br-button class="btn btn-primary" label="Botão desabilitado" icon="br-icons:user" is-disabled></br-button>
+<br-button class="btn btn-primary" label="Botão normal" icon="br-icons:user" id="teste"></br-button>
+<br-button class="btn btn-primary" label="Botão desabilitado" icon="br-icons:user" is-loading></br-button>
 
 <br>
 <br>
 
-<br-button class="btn btn-accent small" label="Botão pequeno"></br-button>
 <br-button class="btn btn-accent" label="Botão normal"></br-button>
-<br-button class="btn btn-accent large" label="Botão grande"></br-button>
-<br-button class="btn btn-accent" label="Botão desabilitado" is-disabled></br-button>
+<br-button class="btn btn-accent" label="Botão desabilitado" is-loading></br-button>
+
+<br>
+<br>
 
 <br-button class="btn btn-primary btn-icon" icon="br-icons:user"></br-button>
 
@@ -59,11 +55,6 @@ Attributes:
 <br>
 
 <br-button class="btn btn-block btn-primary" label="Botão block"></br-button>
-
-<br>
-<br>
-
-<br-button class="btn btn-primary" label="Link button" href="http://google.com"></br-button>
 
 </div>
 
