--- a/src/br-button.html
+++ b/src/br-button.html
@@ -2,59 +2,59 @@
 
 <dom-module id="br-button">
 
-  <link rel="import" type="css" href="../dist/css/br-button.min.css">
+<link rel="import" type="css" href="../dist/css/br-button.min.css">
 
-  <template>
+<template>
 
-    <button type$="{{type}}">
-      <template is="dom-if" if="{{icon}}">
-        <br-icons icon$="{{icon}}" class="icon" hidden$="{{isLoading}}"></br-icons>
-      </template>
-      <template is="dom-if" if="{{isLoading}}">
-        <br-icons icon="br-icons:loading" class="icon icon__spin"></br-icons>
-      </template>
-      <template is="dom-if" if="{{label}}">{{label}}</template>
-    </button>
+	<button type$="{{type}}">
+		<template is="dom-if" if="{{icon}}">
+			<br-icons icon$="{{icon}}" class="icon" hidden$="{{isLoading}}"></br-icons>
+		</template>
+		<template is="dom-if" if="{{isLoading}}">
+			<br-icons icon="br-icons:loading" class="icon icon__spin"></br-icons>
+		</template>
+		<template is="dom-if" if="{{label}}">{{label}}</template>
+	</button>
 
-  </template>
+</template>
 
-  <script>
-    Polymer({
-      is: 'br-button',
+<script>
+	Polymer({
+		is: 'br-button',
 
-      properties: {
-        label: String,
-        icon: String,
-        //class: String,
-        type: {
-          type: String,
-          value: 'button'
-        },
-        isLoading: {
-          type: Boolean,
-          observer: '_isLoading'
-        },
-        isDisabled:{
-          type: Boolean,
-          observer: '_isDisabled'
-        }
-      },
+		properties: {
+			label: String,
+			icon: String,
+			type: {
+				type: String,
+				value: 'button'
+			},
+			isLoading: {
+				type: Boolean,
+				observer: '_toggleDisable'
+			},
+			isDisabled:{
+				type: Boolean,
+				observer: '_toggleDisable'
+			}
+		},
 
-      _isLoading: function() {
-        this._toggleDisable(this.isLoading);
-      },
+		ready: function(){
 
-      _isDisabled: function(){
-        this._toggleDisable(this.isDisabled);
-      },
+			if(!this.isLoading)
+				this.removeAttribute('is-loading');
+			else
+				this.setAttribute('is-loading', 'true');
 
-      _toggleDisable: function(condition){
-        if(condition)
-          this.setAttribute('disabled', true);
-        else
-          this.removeAttribute('disabled');
-      }
+		},
 
-    });
-  </script>
+		_toggleDisable: function(condition){
+			if(condition)
+				this.setAttribute('disabled', true);
+			else
+				this.removeAttribute('disabled');
+		}
+
+	});
+</script>
 </dom-module>
