--- a/demo/index.html
+++ b/demo/index.html
@@ -32,7 +32,7 @@ Attributes:
 
 
 <br-button class="btn" label="Botão normal" icon="br-icons:user"></br-button>
-<br-button class="btn" label="Botão desabilitado" icon="br-icons:user" is-loading="false"></br-button>
+<br-button class="btn" label="Botão desabilitado A" icon="br-icons:user" is-loading="true"></br-button>
 <br-button class="btn" label="Botão desabilitado" icon="br-icons:user" is-loading="false"></br-button>
 
 <br>
