--- a/demo/index.html
+++ b/demo/index.html
@@ -31,9 +31,9 @@ Attributes:
 -->
 
 
-<br-button class="btn" label="Botão normal" icon="br-icons:user"></br-button>
-<br-button class="btn" label="Botão desabilitado A" icon="br-icons:user" is-loading="true"></br-button>
-<br-button class="btn" label="Botão desabilitado" icon="br-icons:user" is-loading="false"></br-button>
+<!-- <br-button class="btn" label="Botão normal" icon="br-icons:user"></br-button> -->
+<br-button id="btn2" class="btn" label="Botão desabilitado A" icon="br-icons:user" is-loading="false"></br-button>
+<!-- <br-button class="btn" label="Botão desabilitado" icon="br-icons:user" is-loading="false"></br-button>
 
 <br>
 <br>
@@ -55,7 +55,7 @@ Attributes:
 <br>
 <br>
 
-<br-button class="btn btn-block btn-primary" label="Botão block"></br-button>
+<br-button class="btn btn-block btn-primary" label="Botão block"></br-button> -->
 
 </div>
 
