added observer to is-loading

--- a/src/br-button.html
+++ b/src/br-button.html
@@ -30,7 +30,10 @@
 				type: String,
 				value: 'button'
 			},
-			isLoading: String
+			isLoading:{ 
+				type:String,
+				observer: '_checkVisibility'
+			}
 			
 		},
 
