Adjustements in html of the demo.

--- a/demo/index.html
+++ b/demo/index.html
@@ -31,31 +31,33 @@ Attributes:
 -->
 
 
-<!-- <br-button class="btn" label="Botão normal" icon="br-icons:user"></br-button> -->
-<br-button id="btn2" class="btn" label="Botão desabilitado A" icon="br-icons:user" is-loading="false"></br-button>
-<!-- <br-button class="btn" label="Botão desabilitado" icon="br-icons:user" is-loading="false"></br-button>
+<br-button label="Default button"></br-button>
+<br-button label="Default button" icon="br-icons:user"></br-button>
+<br-button label="Default button" icon="br-icons:user" is-loading></br-button>
 
 <br>
 <br>
 
-<br-button class="btn btn-primary" label="Botão normal" icon="br-icons:user" id="teste"></br-button>
-<br-button class="btn btn-primary" label="Botão desabilitado" icon="br-icons:user" is-loading></br-button>
+<br-button color="primary" label="Primary button"></br-button>
+<br-button color="primary" label="Primary button" icon="br-icons:user"></br-button>
+<br-button color="primary" label="Primary button" icon="br-icons:user" is-loading></br-button>
 
 <br>
 <br>
 
-<br-button class="btn btn-accent" label="Botão normal"></br-button>
-<br-button class="btn btn-accent" label="Botão desabilitado" is-loading></br-button>
+<br-button color="accent" label="Accent button"></br-button>
+<br-button color="accent" label="Accent button" icon="br-icons:user"></br-button>
+<br-button color="accent" label="Accent button" icon="br-icons:user" is-loading></br-button>
 
 <br>
 <br>
 
-<br-button class="btn btn-primary btn-icon" icon="br-icons:user"></br-button>
+<br-button class="btn-icon" icon="br-icons:user"></br-button>
 
 <br>
 <br>
 
-<br-button class="btn btn-block btn-primary" label="Botão block"></br-button> -->
+<br-button color="primary" label="Block button" block></br-button>
 
 </div>
 
