Added small and large classes.

--- a/src/br-button.html
+++ b/src/br-button.html
@@ -2,7 +2,7 @@
 
 <dom-module id="br-button">
 
-<!-- <link rel="import" type="css" href="../dist/css/br-button.min.css"> -->
+<link rel="import" type="css" href="../dist/css/br-button.min.css">
 
 <template>
 
