--- a/demo/index.html
+++ b/demo/index.html
@@ -34,6 +34,8 @@ Attributes:
 <br-button label="Default button"></br-button>
 <br-button label="Default button" icon="br-icons:user"></br-button>
 <br-button label="Default button" icon="br-icons:user" is-loading></br-button>
+<br-button label="Default button" icon="br-icons:user" size="small"></br-button>
+<br-button label="Default button" icon="br-icons:user" size="large"></br-button>
 
 <br>
 <br>
