Added cssmin to grunt default.

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,8 +7,9 @@
 
 	<link rel="stylesheet" href="../../bedrock/dist/css/style.css">
 
-	<link rel="import" type="html" href="../../polymer/polymer.html">
 	<script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
+	<link rel="import" type="html" href="../../polymer/polymer.html">
+	<link rel="import" type="html" href="../../br-icons/src/br-icons.html">
 	<link rel="import" href="../src/br-button.html">
 
 </head>
