Added default button.

--- a/demo/index.html
+++ b/demo/index.html
@@ -41,6 +41,15 @@ Attributes:
 <br>
 <br>
 
+<br-button label="Default button" color="default"></br-button>
+<br-button label="Default button" color="default" icon="br-icons:user"></br-button>
+<br-button label="Default button" color="default" icon="br-icons:user" is-loading></br-button>
+<br-button label="Default button" color="default" icon="br-icons:user" size="small"></br-button>
+<br-button label="Default button" color="default" icon="br-icons:user" size="large"></br-button>
+
+<br>
+<br>
+
 <br-button color="primary" label="Primary button"></br-button>
 <br-button color="primary" label="Primary button" icon="br-icons:user"></br-button>
 <br-button color="primary" label="Primary button" icon="br-icons:user" is-loading></br-button>
