--- a/src/br-button.html
+++ b/src/br-button.html
@@ -47,11 +47,11 @@
 
 		_setupClass: function() {
 			if (this.color)
-				this.$$('button').classList.add('btn-' + this.color);
+				this.$$('button').classList.add('btn__' + this.color);
 			if (this.size)
-				this.$$('button').classList.add('btn-' + this.size);
+				this.$$('button').classList.add('btn__' + this.size);
 			if (this.block)
-				this.$$('button').classList.add('btn-block');
+				this.$$('button').classList.add('btn__block');
 		},
 
 		toggleDisable: function() {
